# imaging-acceleration-playground

./: README.md
ptychography/: README.md  pyproject.toml
ptychography/example/: example_po_update.py
ptychography/src/ptyupdate/: __init__.py  update.py
ptychography/tests/: __init__.py  po_update_kernel_test.py
tomography/tomo_rotation_projector/: BackProjRB_GPU2D_core.cu  BackProjRB_GPU2D_core.h  BackProjRB_GPU2D_core.hip.cpp  BackprojCtypes.py  DemoProj_bench.py  README.md
tomography/tomo_usfft_recon/: README.md  bench.py  cuda_kernels.py  main.ipynb  test.py  tomo.py
